@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: BSD-3-Clause
-# Copyright 2017-2019, Intel Corporation
+# Copyright 2017-2023, Intel Corporation
 #
 # src/pmemcommon.inc -- common SOURCE definitions for PMDK libraries
 #
@@ -22,7 +22,7 @@ SOURCE +=\
 	$(COMMON)/set.c\
 	$(COMMON)/shutdown_state.c\
 	$(COMMON)/uuid.c\
-	$(call osdep, $(COMMON)/uuid,.c)\
+	$(COMMON)/uuid_linux.c\
 	$(PMEM2)/pmem2_utils.c\
 	$(PMEM2)/config.c\
 	$(PMEM2)/persist_posix.c\
@@ -30,22 +30,12 @@ SOURCE +=\
 	$(PMEM2)/badblocks_$(OS_DIMM).c\
 	$(PMEM2)/usc_$(OS_DIMM).c\
 	$(PMEM2)/source.c\
-	$(PMEM2)/source_posix.c
-
-ifeq ($(OS_KERNEL_NAME),Linux)
-SOURCE +=\
+	$(PMEM2)/source_posix.c\
 	$(PMEM2)/auto_flush_linux.c\
 	$(PMEM2)/deep_flush_linux.c\
 	$(PMEM2)/extent_linux.c\
 	$(PMEM2)/pmem2_utils_linux.c\
 	$(PMEM2)/pmem2_utils_$(OS_DIMM).c
-else
-SOURCE +=\
-	$(PMEM2)/auto_flush_none.c\
-	$(PMEM2)/deep_flush_other.c\
-	$(PMEM2)/extent_none.c\
-	$(PMEM2)/pmem2_utils_other.c
-endif
 
 ifeq ($(OS_DIMM),ndctl)
 SOURCE +=\
