@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: BSD-3-Clause
-# Copyright 2018-2022, Intel Corporation
+# Copyright 2018-2024, Intel Corporation
 #
 # Makefile -- Makefile for extents tool
 #
@@ -14,6 +14,7 @@ vpath %.c $(TOP)/src/libpmem2
 
 TARGET = extents
 OBJS = extents.o\
+	extent_linux.o\
 	pmem2_utils_linux.o\
 	pmem2_utils.o
 
@@ -21,12 +22,6 @@ ifeq ($(OS_DIMM),ndctl)
 OBJS += region_namespace_ndctl.o
 else
 OBJS += region_namespace_none.o
-endif
-
-ifeq ($(OS_KERNEL_NAME),Linux)
-OBJS += extent_linux.o
-else
-OBJS += extent_none.o
 endif
 
 LIBPMEMCORE=y
